Refactor the TestNG runner (#837)