@@ -19,32 +19,46 @@ import com.microsoft.java.test.plugin.model.TestLevel;
 import org.apache.commons.lang3.StringEscapeUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.eclipse.core.resources.IContainer;
+import org.eclipse.core.resources.IFolder;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
+import org.eclipse.debug.core.DebugPlugin;
 import org.eclipse.debug.core.ILaunchConfiguration;
 import org.eclipse.jdt.core.ICompilationUnit;
 import org.eclipse.jdt.core.IJavaElement;
 import org.eclipse.jdt.core.IJavaProject;
+import org.eclipse.jdt.core.IPackageFragment;
+import org.eclipse.jdt.core.IPackageFragmentRoot;
 import org.eclipse.jdt.core.IType;
 import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.JavaModelException;
+import org.eclipse.jdt.launching.IRuntimeClasspathEntry;
+import org.eclipse.jdt.launching.JavaRuntime;
 import org.eclipse.jdt.ls.core.internal.JDTUtils;
 import org.eclipse.jdt.ls.core.internal.ProjectUtils;
 import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
 
 public class JUnitLaunchUtils {
+
+    private static final String TESTNG_LOADER = "com.microsoft.java.test.loader.testng";
+    private static final String JUNIT5_LOADER = "org.eclipse.jdt.junit.loader.junit5";
+    private static final String JUNIT4_LOADER = "org.eclipse.jdt.junit.loader.junit4";
 
     private JUnitLaunchUtils() {}
 
     public static JUnitLaunchArguments resolveLaunchArgument(List<Object> arguments, IProgressMonitor monitor)
-        throws URISyntaxException, CoreException {
+            throws URISyntaxException, CoreException {
         final Gson gson = new Gson();
         final Argument args = gson.fromJson((String) arguments.get(0), Argument.class);
 
@@ -57,7 +71,7 @@ public class JUnitLaunchUtils {
             throw new RuntimeException("Failed to get the project with name: " + args.project);
         }
         info.project = javaProject.getProject();
-        
+
         if (args.scope == TestLevel.ROOT || args.scope == TestLevel.FOLDER) {
             info.testContainer = StringEscapeUtils.escapeXml(javaProject.getHandleIdentifier());
         } else {
@@ -73,7 +87,20 @@ public class JUnitLaunchUtils {
 
         final ILaunchConfiguration configuration = new JUnitLaunchConfiguration("JUnit Launch Configuration", info);
         final JUnitLaunchConfigurationDelegate delegate = new JUnitLaunchConfigurationDelegate();
+
+        if (TESTNG_LOADER.equals(info.testKind)) {
+            // TestNG is not suported yet, we only use the junit launch configuration to resolve the classpath
+            return resolveTestNGLaunchArguments(configuration, javaProject, delegate);
+        }
+
         return delegate.getJUnitLaunchArguments(configuration, "run", monitor);
+    }
+
+    public static void addOverrideDependencies(List<String> vmArgs, String dependencies) {
+        if (dependencies != null && dependencies.length() > 0) {
+            final String[] parseArguments = DebugPlugin.parseArguments(dependencies);
+            vmArgs.addAll(Arrays.asList(parseArguments));
+        }
     }
 
     private static void parseConfigurationInfoForClass(TestInfo info, Argument args) throws JavaModelException {
@@ -128,14 +155,88 @@ public class JUnitLaunchUtils {
         info.testContainer = StringEscapeUtils.escapeXml(targetElement.getHandleIdentifier());
     }
 
+    private static JUnitLaunchArguments resolveTestNGLaunchArguments(ILaunchConfiguration configuration,
+            IJavaProject javaProject, JUnitLaunchConfigurationDelegate delegate) throws CoreException {
+        final IRuntimeClasspathEntry[] unresolved = JavaRuntime.computeUnresolvedRuntimeClasspath(configuration);
+        final IRuntimeClasspathEntry[] resolved = JavaRuntime.resolveRuntimeClasspath(unresolved, configuration);
+        final Set<String> classpaths = new LinkedHashSet<>();
+        final Set<String> modulepaths = new LinkedHashSet<>();
+        for (final IRuntimeClasspathEntry entry : resolved) {
+            final String location = entry.getLocation();
+            if (location != null) {
+                if (entry.getClasspathProperty() == IRuntimeClasspathEntry.USER_CLASSES ||
+                        entry.getClasspathProperty() == IRuntimeClasspathEntry.CLASS_PATH) {
+                    classpaths.add(location);
+                } else if (entry.getClasspathProperty() == IRuntimeClasspathEntry.MODULE_PATH) {
+                    modulepaths.add(location);
+                }
+            }
+        }
+        final JUnitLaunchArguments launchArguments = new JUnitLaunchArguments();
+
+        launchArguments.projectName = javaProject.getProject().getName();
+        launchArguments.classpath = classpaths.toArray(new String[classpaths.size()]);
+        launchArguments.modulepath = modulepaths.toArray(new String[modulepaths.size()]);
+
+        final List<String> vmArgs = new ArrayList<>();
+        vmArgs.add("-ea");
+
+        if (JavaRuntime.isModularProject(javaProject)) {
+            for (final String pkg : getSourcePackages(javaProject)) {
+                collectAddOpensVmArgs(vmArgs, pkg, javaProject);
+            }
+            vmArgs.add("--add-modules=ALL-MODULE-PATH");
+        }
+
+        final String id = javaProject.getOption(JavaCore.COMPILER_PB_ENABLE_PREVIEW_FEATURES, true);
+        if (JavaCore.ENABLED.equals(id)) {
+            vmArgs.add("--enable-preview");
+        }
+        addOverrideDependencies(vmArgs, delegate.getModuleCLIOptions(configuration));
+        launchArguments.vmArguments = vmArgs.toArray(new String[vmArgs.size()]);
+
+        return launchArguments;
+    }
+
+    /**
+     * copied from org.eclipse.jdt.junit.launcher.JUnitLaunchConfigurationDelegate.collectAddOpensVmArgs()
+     */
+    private static void collectAddOpensVmArgs(List<String> addOpensVmArgs, String pkgName, IJavaProject javaProject)
+            throws CoreException {
+        final String sourceModuleName = javaProject.getModuleDescription().getElementName();
+        addOpensVmArgs.add("--add-opens"); //$NON-NLS-1$
+        addOpensVmArgs.add(sourceModuleName + "/" + pkgName + "=ALL-UNNAMED");
+    }
+
+    /**
+     * copied from org.testng.eclipse.ui.util.ConfigurationHelper.getSourcePackages()
+     */
+    private static Set<String> getSourcePackages(IJavaProject javaProject) throws JavaModelException {
+        final Set<String> pkgs = new HashSet<>();
+        for (final IPackageFragmentRoot pkgFragmentRoot : javaProject.getPackageFragmentRoots()) {
+            if (!pkgFragmentRoot.isArchive()) {
+                for (final IJavaElement pkg : pkgFragmentRoot.getChildren()) {
+                    if (!pkg.getElementName().isEmpty() && !(pkg instanceof IFolder)) {
+                        if (((IPackageFragment) pkg).containsJavaResources()) {
+                            pkgs.add(((IPackageFragment) pkg).getElementName());
+                        }
+                    }
+                }
+            }
+        }
+        return pkgs;
+    }
+
     private static String getEclipseTestKind(TestKind testKind) {
         switch (testKind) {
             case JUnit:
-                return "org.eclipse.jdt.junit.loader.junit4";
+                return JUNIT4_LOADER;
             case JUnit5:
-                return "org.eclipse.jdt.junit.loader.junit5";
+                return JUNIT5_LOADER;
+            case TestNG:
+                return TESTNG_LOADER;
             default:
-                throw new IllegalArgumentException("The test kind: " + testKind.name() + "si not supported yet.");
+                throw new IllegalArgumentException("The test kind: " + testKind.name() + " is not supported yet.");
         }
     }
 
